<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dashboard_background"
    android:padding="24dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dashboard_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_dashboard"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/dashboard_text"
        app:layout_constraintEnd_toStartOf="@id/notification"
        app:layout_constraintTop_toTopOf="@id/dashboard_text"
        app:srcCompat="@drawable/ic_search_outline"
        app:tint="@color/white" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/search"
        app:layout_constraintEnd_toStartOf="@id/email"
        app:layout_constraintTop_toTopOf="@id/search"
        app:srcCompat="@drawable/ic_notification_outline"
        app:tint="@color/white" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/notification"
        app:layout_constraintEnd_toStartOf="@id/profile"
        app:layout_constraintTop_toTopOf="@id/notification"
        app:srcCompat="@drawable/ic_email_outline"
        app:tint="@color/white" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profile"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:src="@drawable/profile_image"
        app:layout_constraintBottom_toBottomOf="@id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/email" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/coin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_30_coins"
        android:textColor="@color/white"
        android:textSize="8sp"
        android:padding="2dp"
        android:background="@drawable/coin_background"
        app:layout_constraintTop_toBottomOf="@id/profile"
        app:layout_constraintStart_toStartOf="@id/profile"
        app:layout_constraintEnd_toEndOf="@id/profile"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/scan_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sell_card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dashboard_text">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_2"
            android:padding="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/scan_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/scan_arrow_forward"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintBottom_toBottomOf="@id/scan_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/scan_text"
                app:srcCompat="@drawable/ic_arrow_forward_outline"
                app:tint="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/scan_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lorem"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scan_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/sell_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@id/scan_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/scan_card_view"
        app:layout_constraintTop_toTopOf="@id/scan_card_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main_2"
                android:padding="8dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/sell_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sell"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/sell_arrow_forward"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintBottom_toBottomOf="@id/sell_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/sell_text"
                    app:srcCompat="@drawable/ic_arrow_forward_outline"
                    app:tint="@color/white" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/sell_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/lorem"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sell_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
